--- a/charts/admissions-webhook/values.yaml
+++ b/charts/admissions-webhook/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: isaaguilar/admissions-webhook
-  tag: 0.1.0
+  tag: 0.1.0-test.6
   pullPolicy: Always
 
 nameOverride: ""
